<resources>
    <string name="app_name">INSTA PRESISI</string>
    <string name="login_title">INSTA PRESISI</string>
    <string name="login_subtitle">Sistem Kontrol &amp; Monitoring Pagar Listrik</string>
    <string name="login_card_title">Autentikasi Operator</string>
    <string name="hint_email">Email Operator</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="btn_login_text">MASUK KE SISTEM</string>
    <string name="not_have_account">Belum terdaftar? </string>
    <string name="register_now">Daftar Akun</string>
    <string name="desc_app_logo">Logo Aplikasi INSTA PRESISI</string>
</resources>